--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,15 @@ jobs:
     - uses: actions/checkout@v4
     - name: Deps
       run: sudo apt-get install libdbus-1-dev pkg-config libxdo-dev libxkbcommon-dev -y
+    - name: Cache
+      uses: actions/cache@v4
+      with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Build
       run: cargo build --verbose --profile ${{ matrix.BUILD_TARGET }}
     - name: Upload release artifact
